# matrix-elem-conversion

./: README.md  big_diffs.txt  compare.py  compare_integer_arrays.py  me3jp_e2_E2.txt  me3jp_e2_E4.txt  me3jp_index.txt  me3jp_index_new.txt  ornl_to_nljt_map.txt  pyproject.toml
data/: Emax_12_J12max_5_Lcmmax_9_Jbarmax_9_twoJ3max_9_l3max_5_NP_22_Np_18_hw_16.00_c1_-0.81_c3_-3.20_c4_5.40_cD_1.26_cE_-0.12_Lambda3N_2.0_O16_e4_E12_EM1.8_2.0_HF_SPB.me2j_np  Emax_12_J12max_5_Lcmmax_9_Jbarmax_9_twoJ3max_9_l3max_5_NP_22_Np_18_hw_16.00_c1_-0.81_c3_-3.20_c4_5.40_cD_1.26_cE_-0.12_Lambda3N_2.0_O16_e4_E12_EM1.8_2.0_HF_SPB.me2jp  VNN_N3LO_EM500_lambda_1.80_hw16.00_emax_04.me2j  VNN_N3LO_EM500_lambda_1.80_hw16.00_emax_04.me2j_np  VNN_N3LO_EM500_lambda_1.80_hw16.00_emax_04.me2jp  roth_nljjmts_e_02.txt  roth_nljjmts_e_06.txt  roth_nljjmts_isospins_e_02.txt  roth_nljjmts_parities_e_02.txt  roth_nljjmts_projections_e_02.txt  roth_nljjs_e_04.txt  roth_nljjs_e_06.txt  roth_nljjs_e_16.txt  roth_nljjts_e_06.txt  roth_nljjts_e_16.txt
scripts/: convert_me2j_np_to_me2jp.py  convert_me2j_to_me2j_np.py  convert_me2jp_to_flat_roth.py  convert_ornl_to_flat_roth.py  make_roth_me3jp_quantum_numbers.py  make_roth_nljjs.py  make_roth_nljjtms.py  make_roth_nljjtms_isospins.py  make_roth_nljjtms_parities.py  make_roth_nljjtms_projections.py  make_roth_nljjts.py  truncate_me2j_file.py
